feat: docker-compose::api-gateway.
Api-gateway and some minor improvements and modifications.